--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
     <link rel="stylesheet" href="effects.css">
 </head>
 <body>
+        <div class="curs"></div>
+    <br>
     <h1>Points<p>0</p></h1>
     <div class="action">
-        <div id="window1" class="enemy_window turnSquare enemy"></div>
-        <div id="window2" class="enemy_window turnSquare enemy"></div>
-        <div id="window3" class="enemy_window turnSquare enemy"></div>
+        <div id="window1" class="enemy_window turnSquare enemy "></div>
+        <div id="window2" class="enemy_window turnSquare enemy "></div>
+        <div id="window3" class="enemy_window turnSquare enemy "></div>
         <div id="window4" class="enemy_window turnSquare enemy "></div>
-        <div id="window5" class="enemy_window turnSquare enemy"></div>
+        <div id="window5" class="enemy_window turnSquare enemy "></div>
+
+        
     </div>
     <div class="gameOver">
         <h1>GAME OVER</h1>
         <h2>you scored<br>
             <br> <span class="score">0</span></h2>
         <h2>points</h2>
+        <div class="restart"><h2>Restart</h2></div>
+        
     </div>
     <script src="app.js"></script>
 </body>
